bugfix: plus icon remained visible after DEL-key pressed

--- a/style/demo.css
+++ b/style/demo.css
@@ -16,9 +16,7 @@ h1, h2 {
 }
 
 #frmControls {
-    container-type: inline-size;
     display: flex;
-    justify-content: space-between;
     padding: 1rem;
     background-color: aliceblue;
     min-height: 33vh;
